# scrapy

./: .gitignore  install_script.sh  pyproject.toml  restaurants_scrapper.py
