[project]
name = "scrapy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "bs4>=0.0.2",
    "fake-useragent>=2.0.3",
    "pandas>=2.2.3",
    "playwright>=1.50.0",
    "playwright-stealth>=1.0.6",
    "tenacity>=9.0.0",
]
